--- a/index.html
+++ b/index.html
@@ -3,124 +3,126 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catherine Xu - Personal Website</title>
+    <title>Catherine's Website</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        /* Basic reset */
+        body, h1, h2, p {
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-            line-height: 1.6;
+            font-family: Arial, sans-serif;
         }
 
-        header {
-            background: #333;
-            color: white;
-            padding: 30px;
-            text-align: center;
+        /* Container for the navigation buttons */
+        .nav-buttons {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 20px;
         }
 
-        header h1 {
-            margin: 0;
-            font-size: 3em;
-        }
-
-        header h3 {
-            font-size: 1.2em;
-        }
-
-        section {
-            padding: 60px 20px;
-            text-align: center;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: auto;
-        }
-
-        h2 {
-            color: #333;
-        }
-
-        .experience, .projects {
-            text-align: left;
-            margin-top: 40px;
-        }
-
-        .contact a {
-            color: #333;
-            text-decoration: none;
+        .nav-buttons button {
             padding: 10px 20px;
-            margin: 10px;
-            border: 1px solid #333;
-            border-radius: 5px;
-        }
-
-        footer {
-            text-align: center;
-            padding: 20px;
-            background: #333;
+            font-size: 18px;
+            background-color: #007BFF;
             color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
         }
 
-        footer a {
-            color: #f4f4f4;
-            text-decoration: none;
-            margin: 0 10px;
+        .nav-buttons button:hover {
+            background-color: #0056b3;
         }
 
+        /* Hide all content sections by default */
+        .tab-content {
+            display: none;
+        }
+
+        /* Show the active tab content */
+        .active {
+            display: block;
+        }
+
+        /* Style for the content sections */
+        .section {
+            padding: 20px;
+            margin: 20px;
+            border-radius: 5px;
+            background-color: #f9f9f9;
+        }
+
+        h1 {
+            font-size: 2.5em;
+            color: #333;
+        }
+
+        p {
+            font-size: 1.2em;
+            color: #555;
+        }
+
+        /* Optional: Style the header */
+        header {
+            text-align: center;
+            margin-bottom: 40px;
+        }
     </style>
 </head>
 <body>
+
+    <!-- Header Section -->
     <header>
-        <h1>Catherine Xu</h1>
-        <h3>Advocate for Youth, Environmental Justice, and Social Equity</h3>
+        <h1>Catherine's Personal Website</h1>
+        <p>Welcome to my personal website! Learn more about my projects, experience, and interests.</p>
     </header>
 
-    <section id="about">
-        <div class="container">
-            <h2>About Me</h2>
-            <p>Hello! I'm Catherine Xu, an advocate for racial equity, environmental sustainability, and youth empowerment. I have a background in policy, youth organizing, and educational advocacy, with a focus on creating impactful change within communities.</p>
-            <p>I've worked with various youth-driven organizations, including the California Association of Student Councils, Diversify Our Narrative, and the Ventura County Youth Coalition, where I've led initiatives promoting equity in education, climate action, and community development.</p>
-        </div>
-    </section>
+    <!-- Navigation Buttons -->
+    <div class="nav-buttons">
+        <button onclick="showTab('about')">About Me</button>
+        <button onclick="showTab('experience')">Experience</button>
+        <button onclick="showTab('projects')">Projects</button>
+        <button onclick="showTab('contact')">Contact</button>
+    </div>
 
-    <section id="experience">
-        <div class="container experience">
-            <h2>Experience</h2>
-            <ul>
-                <li><strong>Vice Chair - Student District Advisory Council</strong> - Representing students in district matters and contributing to policy on equity and school reopenings.</li>
-                <li><strong>Leader - Ventura County Youth Coalition</strong> - Advocating for racial equity and environmental sustainability through youth-driven events and projects.</li>
-                <li><strong>Policy Advocate - California Association of Student Councils</strong> - Led a $6.3 million budget request, contributed to state legislation, and championed racial equity in school curriculums.</li>
-                <li><strong>Founder - Spark SC</strong> - Organizing entrepreneurship initiatives to promote social impact and empower young entrepreneurs.</li>
-            </ul>
-        </div>
-    </section>
+    <!-- Content Sections (Tabs) -->
+    <div id="about" class="tab-content section">
+        <h2>About Me</h2>
+        <p>Hi, I'm Catherine. I'm passionate about environmental advocacy, social entrepreneurship, and policy work. I have been involved in numerous leadership roles and projects that focus on making positive change.</p>
+    </div>
 
-    <section id="projects">
-        <div class="container projects">
-            <h2>Selected Projects</h2>
-            <ul>
-                <li><strong>TEDx Event on Environmental Activism</strong> - Hosted a TEDx event to inspire youth involvement in environmental advocacy.</li>
-                <li><strong>Menstrual Equity Advocacy</strong> - Led a campaign to address period poverty and improve menstrual equity policies, winning a national scholarship from Zonta International.</li>
-                <li><strong>Young Legislators Program</strong> - Participated in Assemblymember Jacqui Irwin’s program to deepen my understanding of state government and its community impact.</li>
-            </ul>
-        </div>
-    </section>
+    <div id="experience" class="tab-content section">
+        <h2>Experience</h2>
+        <p>I have experience in policy advocacy, youth leadership, and environmental education. I've worked with organizations like the California Association of Student Councils (CASC) and the Thousand Oaks Youth Commission, among others.</p>
+    </div>
 
-    <section id="contact">
-        <div class="container contact">
-            <h2>Contact Me</h2>
-            <p>Interested in collaborating or learning more about my work? Feel free to reach out!</p>
-            <a href="mailto:catherinexu@email.com">Email Me</a>
-            <a href="https://www.linkedin.com/in/catherinexu">LinkedIn</a>
-        </div>
-    </section>
+    <div id="projects" class="tab-content section">
+        <h2>Projects</h2>
+        <p>I work on various projects related to racial equity, sustainability, and youth empowerment. My latest project focuses on integrating sustainability education into school curriculums and advancing environmental policy.</p>
+    </div>
 
-    <footer>
-        <p>&copy; 2024 Catherine Xu</p>
-    </footer>
+    <div id="contact" class="tab-content section">
+        <h2>Contact</h2>
+        <p>You can reach me through email or follow me on social media to stay updated on my work and projects. Feel free to get in touch!</p>
+    </div>
+
+    <script>
+        // Function to display the corresponding tab content
+        function showTab(tabName) {
+            // Hide all tabs
+            var tabs = document.querySelectorAll('.tab-content');
+            tabs.forEach(function(tab) {
+                tab.classList.remove('active');
+            });
+
+            // Show the clicked tab
+            var activeTab = document.getElementById(tabName);
+            activeTab.classList.add('active');
+        }
+
+        // Show the 'About Me' tab by default
+        showTab('about');
+    </script>
 </body>
 </html>
