--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catherine's Website</title>
+    <title>Catherine Xu</title>
     <style>
         /* Basic reset */
         body, h1, h2, p {
             margin: 0;
             padding: 0;
-            font-family: Arial, sans-serif;
+            font-family: Open San, sans-serif;
         }
 
         /* Container for the navigation buttons */
@@ -74,8 +74,8 @@
 
     <!-- Header Section -->
     <header>
-        <h1>Catherine's Personal Website</h1>
-        <p>Welcome to my personal website! Learn more about my projects, experience, and interests.</p>
+        <h1>Catherine Xu</h1>
+        <p>Hi👋 I'm Catherine! I'm an student at USC studying Business and Public Policy.</p>
     </header>
 
     <!-- Navigation Buttons -->
@@ -89,12 +89,12 @@
     <!-- Content Sections (Tabs) -->
     <div id="about" class="tab-content section">
         <h2>About Me</h2>
-        <p>Hi, I'm Catherine. I'm passionate about environmental advocacy, social entrepreneurship, and policy work. I have been involved in numerous leadership roles and projects that focus on making positive change.</p>
+        <p>Hi, I'm Catherine. I'm passionate about environmental advocacy, social entrepreneurship, and policy work. In my free time, I like to garden, hike, run, read, travel, and side quest.</p>
     </div>
 
     <div id="experience" class="tab-content section">
         <h2>Experience</h2>
-        <p>I have experience in policy advocacy, youth leadership, and environmental education. I've worked with organizations like the California Association of Student Councils (CASC) and the Thousand Oaks Youth Commission, among others.</p>
+        <p>I have experience in education policy and environmental advocacy. I've worked with organizations like the California Association of Student Councils (CASC) and the Thousand Oaks Youth Commission, among others to lead policy initatives and help write bills affecting California's youth.</p>
     </div>
 
     <div id="projects" class="tab-content section">
