--- a/index.html
+++ b/index.html
@@ -3,26 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catherine Xu - Reviews & Travel</title>
+    <title>Catherine Xu</title>
     <style>
+        /* General Reset */
         body {
             margin: 0;
             padding: 0;
-            font-family: 'Open Sans', sans-serif;
-            background-color: #f5f5f5;
-            color: #333;
+            font-family: 'Roboto', sans-serif;
             line-height: 1.6;
+            background-color: #fafafa;
+            color: #333;
         }
 
-        h1, h2, p {
-            margin: 0;
-        }
-
+        /* Header Styling */
         header {
             text-align: center;
             padding: 60px 20px;
             background-color: #ffffff;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            border-bottom: 1px solid #ddd;
         }
 
         header h1 {
@@ -30,62 +28,137 @@
             color: #222;
         }
 
-        .reviews-section {
-            max-width: 900px;
-            margin: 40px auto;
+        header p {
+            margin-top: 15px;
+            font-size: 1.2rem;
+            color: #666;
+        }
+
+        /* Sidebar Navigation */
+        .sidebar {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 250px;
+            height: 100%;
+            background-color: #f4f4f4;
+            border-right: 1px solid #ddd;
+            padding-top: 60px;
+            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+        }
+
+        .sidebar button {
+            display: block;
+            width: calc(100% - 40px);
+            margin: 10px auto;
+            padding: 15px;
+            font-size: 1rem;
+            background: none;
+            border: none;
+            text-align: left;
+            color: #333;
+            border-radius: 5px;
+            transition: background-color 0.3s, color 0.3s;
+            cursor: pointer;
+        }
+
+        .sidebar button:hover {
+            background-color: #007bff;
+            color: #fff;
+        }
+
+        /* Main Content Area */
+        .main-content {
+            margin-left: 270px;
+            padding: 40px;
+        }
+
+        .tab-content {
+            display: none;
+        }
+
+        .tab-content.active {
+            display: block;
+        }
+
+        /* Footer Styling */
+        footer {
+            text-align: center;
             padding: 20px;
             background-color: #ffffff;
-            border-radius: 10px;
-            box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+            border-top: 1px solid #ddd;
+            color: #666;
         }
 
-        .review {
-            margin-bottom: 40px;
+        footer a {
+            color: #007bff;
+            text-decoration: none;
         }
 
-        .review h2 {
-            font-size: 2rem;
-            color: #007BFF;
-        }
-
-        .review p {
-            font-size: 1.1rem;
-            color: #555;
-            margin-top: 10px;
-        }
-
-        .review img {
-            max-width: 100%;
-            border-radius: 10px;
-            margin-top: 15px;
-        }
-
-        .back-link {
-            display: block;
-            text-align: center;
-            margin: 20px 0;
+        footer a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Reviews & Travel</h1>
-        <p>My thoughts on restaurants, travel spots, and lessons from adventures.</p>
-    </header>
+    <!-- Sidebar Navigation -->
+    <div class="sidebar">
+        <button onclick="showTab('home')">Home</button>
+        <button onclick="showTab('blog')">Blog</button>
+        <button onclick="showTab('reviews')">Reviews & Travel</button>
+    </div>
 
-    <div class="reviews-section">
-        <div class="review">
-            <h2>Restaurant Review: Name</h2>
-            <p>A detailed review of the restaurant, including highlights and recommendations.</p>
-            <img src="restaurant.jpg" alt="Restaurant">
+    <!-- Main Content Sections -->
+    <div class="main-content">
+        <!-- Home Section -->
+        <div id="home" class="tab-content active">
+            <header>
+                <h1>Catherine Xu</h1>
+                <p>Welcome to my personal space where I share my thoughts, adventures, and lessons.</p>
+            </header>
+            <p>This is the main content area where you can add an introduction or highlights.</p>
         </div>
-        <div class="review">
-            <h2>Travel Spot: Destination Name</h2>
-            <p>Overview of the destination with lessons learned and personal insights.</p>
-            <img src="travel.jpg" alt="Travel Spot">
+
+        <!-- Blog Section -->
+        <div id="blog" class="tab-content">
+            <h2>Blog</h2>
+            <p>Welcome to my blog! Here are my latest writings and thoughts:</p>
+            <ul>
+                <li><b>Embracing Change:</b> How to make transitions smoother and more meaningful.</li>
+                <li><b>Finding Balance:</b> Tips for managing a busy life with intention.</li>
+                <li><b>Mindful Productivity:</b> How to get things done without burnout.</li>
+            </ul>
+        </div>
+
+        <!-- Reviews & Travel Section -->
+        <div id="reviews" class="tab-content">
+            <h2>Reviews & Travel</h2>
+            <p>Discover my recent experiences at restaurants, travel spots, and lessons learned along the way!</p>
+            <h3>Restaurant Reviews</h3>
+            <ul>
+                <li><b>Hillstone:</b> Amazing steak and great ambiance! Highly recommend.</li>
+                <li><b>Uovo:</b> Simple but delicious pasta in the heart of Santa Monica.</li>
+            </ul>
+            <h3>Travel Highlights</h3>
+            <p><b>Kyoto, Japan:</b> A serene escape with beautiful temples and the best matcha desserts.</p>
+            <p><b>Paris, France:</b> A dreamy city filled with art, history, and the best croissants.</p>
         </div>
     </div>
 
-    <a class="back-link" href="index.html">← Back to Home</a>
+    <!-- Footer Section -->
+    <footer>
+        <p>&copy; 2024 Catherine Xu | <a href="#home" onclick="showTab('home')">Back to Home</a></p>
+    </footer>
+
+    <!-- JavaScript for Tab Switching -->
+    <script>
+        function showTab(tabName) {
+            const tabs = document.querySelectorAll('.tab-content');
+            tabs.forEach(tab => tab.classList.remove('active'));
+
+            const activeTab = document.getElementById(tabName);
+            activeTab.classList.add('active');
+        }
+    </script>
 </body>
 </html>
