--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             padding: 0;
             font-family: 'Roboto', sans-serif;
             line-height: 1.6;
-            background-color: #fafafa;
+            background-color: #f8f9fa;
             color: #333;
         }
 
@@ -39,37 +39,43 @@
             position: fixed;
             top: 0;
             left: 0;
-            width: 250px;
+            width: 200px;
             height: 100%;
-            background-color: #f4f4f4;
+            background-color: #ffffff;
             border-right: 1px solid #ddd;
-            padding-top: 60px;
             box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+        }
+
+        .sidebar h2 {
+            font-size: 1.2rem;
+            margin-bottom: 20px;
+            color: #444;
         }
 
         .sidebar button {
             display: block;
-            width: calc(100% - 40px);
-            margin: 10px auto;
-            padding: 15px;
+            width: 100%;
+            padding: 10px 15px;
+            margin-bottom: 10px;
             font-size: 1rem;
             background: none;
             border: none;
             text-align: left;
-            color: #333;
+            color: #007bff;
             border-radius: 5px;
             transition: background-color 0.3s, color 0.3s;
             cursor: pointer;
         }
 
-        .sidebar button:hover {
+        .sidebar button:hover, .sidebar button.active {
             background-color: #007bff;
             color: #fff;
         }
 
         /* Main Content Area */
         .main-content {
-            margin-left: 270px;
+            margin-left: 220px;
             padding: 40px;
         }
 
@@ -79,6 +85,25 @@
 
         .tab-content.active {
             display: block;
+        }
+
+        /* Section Styling */
+        h2 {
+            font-size: 2rem;
+            color: #222;
+        }
+
+        p, ul {
+            font-size: 1rem;
+            color: #555;
+        }
+
+        ul {
+            padding-left: 20px;
+        }
+
+        ul li {
+            margin-bottom: 10px;
         }
 
         /* Footer Styling */
@@ -103,9 +128,12 @@
 <body>
     <!-- Sidebar Navigation -->
     <div class="sidebar">
-        <button onclick="showTab('home')">Home</button>
-        <button onclick="showTab('blog')">Blog</button>
-        <button onclick="showTab('reviews')">Reviews & Travel</button>
+        <h2>Navigation</h2>
+        <button onclick="showTab('home')" id="btn-home" class="active">Home</button>
+        <button onclick="showTab('about')" id="btn-about">About</button>
+        <button onclick="showTab('projects')" id="btn-projects">Projects</button>
+        <button onclick="showTab('blog')" id="btn-blog">Blog</button>
+        <button onclick="showTab('reviews')" id="btn-reviews">Reviews & Travel</button>
     </div>
 
     <!-- Main Content Sections -->
@@ -117,6 +145,26 @@
                 <p>Welcome to my personal space where I share my thoughts, adventures, and lessons.</p>
             </header>
             <p>This is the main content area where you can add an introduction or highlights.</p>
+        </div>
+
+        <!-- About Section -->
+        <div id="about" class="tab-content">
+            <h2>About Me</h2>
+            <p>
+                Hi, I'm Catherine. I'm passionate about environmental advocacy, social entrepreneurship, and policy work. 
+                In my free time, I enjoy gardening, hiking, running, reading, traveling, and exploring new challenges.
+            </p>
+        </div>
+
+        <!-- Projects Section -->
+        <div id="projects" class="tab-content">
+            <h2>Projects</h2>
+            <p>I work on various projects related to racial equity, sustainability, and youth empowerment. Here are some highlights:</p>
+            <ul>
+                <li><b>Sustainability Education:</b> Integrating sustainability education into school curriculums.</li>
+                <li><b>Policy Advocacy:</b> Drafting and advocating for bills on racial equity and environmental justice.</li>
+                <li><b>Youth Empowerment:</b> Leading initiatives to involve young people in impactful projects.</li>
+            </ul>
         </div>
 
         <!-- Blog Section -->
@@ -153,11 +201,13 @@
     <!-- JavaScript for Tab Switching -->
     <script>
         function showTab(tabName) {
-            const tabs = document.querySelectorAll('.tab-content');
-            tabs.forEach(tab => tab.classList.remove('active'));
+            // Deactivate all tabs and buttons
+            document.querySelectorAll('.tab-content').forEach(tab => tab.classList.remove('active'));
+            document.querySelectorAll('.sidebar button').forEach(btn => btn.classList.remove('active'));
 
-            const activeTab = document.getElementById(tabName);
-            activeTab.classList.add('active');
+            // Activate the selected tab and button
+            document.getElementById(tabName).classList.add('active');
+            document.getElementById('btn-' + tabName).classList.add('active');
         }
     </script>
 </body>
